# ScriptCraft

./: .gitignore  README.md
backend/: README.md  app_config.py  chapter_analysis.py  chapter_parser.py  main.py  pyproject.toml  script_yaml.py  story_elements.py
backend/auth/: __init__.py  dependencies.py  router.py  schemas.py  security.py  service.py  settings.py
backend/database/: __init__.py  base.py  config.py  schema.sql  session.py
backend/llm/: __init__.py  anthropic_client.py  base.py  env_loader.py  factory.py  openai_client.py  streaming.py
backend/llm/providers/: __init__.py  anthropic.py  common.py  openai.py
backend/models/: __init__.py  ai_run.py  auth_session.py  chapter.py  chapter_analysis.py  project.py  script_version.py  story_element.py  user.py
backend/projects/: pipeline_service.py  router.py  schemas.py  service.py  sse.py
backend/script_generation/: __init__.py  fragment.py  generator.py  memory.py  planner.py  repair.py  validation.py
backend/story_element_extraction/: __init__.py  card_tools.py  context_tools.py  extractor.py  merger.py  store.py
docs/: yaml-schema.md
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/api/: auth.ts  chapters.ts  client.ts  projects.ts  script-yaml.ts  story-elements.ts
frontend/src/composables/: useScriptYamlDocument.ts
frontend/src/lib/: novel-text.ts  pixi-storyboard-renderer.ts  storyboard-timeline.ts  workspace-formatters.ts
test/: test_chapter_analysis.py  test_script_yaml.py  test_story_elements.py
(+14 files in other folders)
