[project]
name = "backend"
version = "0.1.0"
description = "ScriptCraft Python backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.0",
    "fastapi>=0.136.3",
    "langchain-anthropic>=1.4.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "pymysql>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.49.0",
]
